--- a/src/styles/AddAttendanceMachine.css
+++ b/src/styles/AddAttendanceMachine.css
@@ -1,40 +1,43 @@
-.contianer{
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: #fff;
+.contianer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
 }
-.content{
-    padding:0 24px;
-    background: #fff;
+.content {
+  padding: 0 24px;
+  background: #fff;
 }
-.item{
-    padding:18px 0;
-    border-bottom:2px solid #ddd;
+.item {
+  padding: 18px 0;
+  border-bottom: 2px solid #ddd;
 }
-.item>input{
-    border:none;
-    outline:none;
-    line-height:60px;
-    color:#000;
-    font-size:32px;
+.item > input {
+  border: none;
+  outline: none;
+  line-height: 60px;
+  color: #000;
+  font-size: 32px;
 }
-.item>input:nth-child(1){
-    font-size:26px;
-    color:#666;
+.item > input:nth-child(1) {
+  font-size: 26px;
+  color: #666;
 }
-.binding{
-    position:fixed;
-    bottom:0;
-    left:0;
-    width:100%;
-    height:102px;
-    border-top:2px solid #ddd;
-    text-align: center;
-    line-height: 102px;
-    font-size:32px;
-    color:#389fe9;
-    background: #fff;
+.binding {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 102px;
+  border-top: 2px solid #ddd;
+  /* text-align: center; */
+  /* line-height: 102px; */
+  font-size: 32px;
+  color: #389fe9;
+  background: #fff;
 }
