--- a/src/styles/Alert.css
+++ b/src/styles/Alert.css
@@ -1,44 +1,47 @@
-.wrap{
-    z-index:100;
-    position: absolute;
-    left:0;
-    right:0;
-    top: 0;
-    bottom:0;
-    background:rgba(0,0,0,0.3)
+.wrap {
+  z-index: 100;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.3);
 }
-.box{
-    position:absolute;
-    top:50%;
-    left:50%;
-    width:72.2%;
-    /* width:542px; */
-    /* height:236px; */
-    transform:translate(-50%,-50%);
-    border-radius:22px;
-    font-size:34px;
-    background:#f3f3f3;
+.box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 72.2%;
+  /* width:542px; */
+  /* height:236px; */
+  transform: translate(-50%, -50%);
+  border-radius: 22px;
+  font-size: 34px;
+  background: #f3f3f3;
 }
-.text{
-    margin: 0 38px;
-    padding:58px 0;
-    text-align: center;
-    font-size:28px;
+.text {
+  margin: 0 38px;
+  padding: 58px 0;
+  text-align: center;
+  font-size: 28px;
 }
-.selectTab{
-    box-sizing: border-box;
-    width:100%;
-    height:88px;
-    border-top:1px solid #e4e5e6;
-    line-height: 88px;
+.selectTab {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  width: 100%;
+  height: 88px;
+  border-top: 1px solid #e4e5e6;
 }
-.selectTab>span{
-    display: inline-block;
-    width:49.5%; 
-    text-align: center;
-    font-size:30px;
-    color:#4ea7ea;
+.selectTab > span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 49.5%;
+  height: 88px;
+  font-size: 30px;
+  color: #4ea7ea;
 }
-.selectTab>span:nth-child(1){
-    border-right:1px solid #e4e5e6;
+.selectTab > span:nth-child(1) {
+  border-right: 1px solid #e4e5e6;
 }
