--- a/src/styles/AttendanceManagement.css
+++ b/src/styles/AttendanceManagement.css
@@ -1,129 +1,139 @@
-.container{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: #fff;
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
 }
-.content{
-    background:#fff;
-    padding-bottom:110px;
+.content {
+  background: #fff;
+  padding-bottom: 110px;
 }
-.clockTime,.automaticTime{
-    width:100%;
-    border-bottom:2px solid #ddd;
+.clockTime,
+.automaticTime {
+  width: 100%;
+  border-bottom: 2px solid #ddd;
 }
-.clock{
-    padding: 36px 46px 0;
-    font-size:30px;
-    color:#999;
+.clock {
+  padding: 36px 46px 0;
+  font-size: 30px;
+  color: #999;
 }
-.time{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    height:102px;
-    margin: 0 46px;
-    font-size:34px;
-    text-indent:24px;
-    color:#000;
+.time {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 102px;
+  margin: 0 46px;
+  font-size: 34px;
+  text-indent: 24px;
+  color: #000;
 }
-.icon{
-    display:inline-block;
-    width:20px;
-    height:10px;
-    padding-left:25px;
-    vertical-align: middle;
+.icon {
+  display: inline-block;
+  width: 20px;
+  height: 10px;
+  padding-left: 25px;
+  vertical-align: middle;
 }
-.clockTime>div:nth-child(2),.automaticTime>div:nth-child(2){
-    border-bottom:2px solid #ddd;
+.clockTime > div:nth-child(2),
+.automaticTime > div:nth-child(2) {
+  border-bottom: 2px solid #ddd;
 }
-.workTime{
-    padding:0 44px;
+.workTime {
+  padding: 0 44px;
 }
-.work{
-    margin:35px 0 20px;
-    font-size:30px;
-    color:#999;
+.work {
+  margin: 35px 0 20px;
+  font-size: 30px;
+  color: #999;
 }
-.holiday,.custom{
-    font-size:30px;
-    color:#000;
-    height:50px;
-    line-height: 50px;
-    margin:27px 0;
+.holiday,
+.custom {
+  display: flex;
+  /* justify-content:center; */
+  align-items: center;
+  font-size: 30px;
+  color: #000;
+  height: 50px;
+  /* line-height: 50px; */
+  margin: 27px 0;
 }
-.choose,.nochoose{
-    display:inline-block;
-    width:50px;
-    height:50px;
-    margin:0 26px;
-    vertical-align: middle;
+.choose,
+.nochoose {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin: 0 26px;
+  vertical-align: middle;
 }
-.week{
-    padding-left:26px;
+.week {
+  padding-left: 26px;
 }
-.item{
-    display:inline-block;
-    width:25%;
-    height:50px;
-    margin-bottom:36px;
-    font-size:26px;
-    line-height: 50px;
+.item {
+  display: inline-block;
+  width: 25%;
+  height: 50px;
+  margin-bottom: 36px;
+  font-size: 26px;
+  line-height: 50px;
 }
-.item>img{
-    width:44px;
-    height:44px;
-    margin-right:14px;
-    vertical-align: middle;
+.item > img {
+  width: 44px;
+  height: 44px;
+  margin-right: 14px;
+  vertical-align: middle;
 }
 .mask {
-    background: rgba(0, 0, 0, 0.3);
-    position:absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-  }
-  .maskBox {
-    position: absolute;
-    width: 100%;
-    left:0;
-    bottom: 0;
-    background:#fff;
-  }
-  .operation{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    position:relative;
-    width:100%;
-    height:98px;
-  }
-  .spread{
-    width:70px;
-    height:28px;
-  }
-
-.determine{
-    position: fixed;
-    left:0;
-    bottom:0;
-    height:102px;
-    width:100%;
-    border-top:2px solid #eeeeee;
-    line-height:102px;
-    text-align:center;
-    font-size:32px;
-    color:#369fea;
-    background:#fff;
+  background: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
-.dateClass{
-    width: 180px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color:#000;
+.maskBox {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  background: #fff;
+}
+.operation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 98px;
+}
+.spread {
+  width: 70px;
+  height: 28px;
+}
+
+.determine {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 102px;
+  width: 100%;
+  border-top: 2px solid #eeeeee;
+  /* line-height:102px; */
+  /* text-align:center; */
+  font-size: 32px;
+  color: #369fea;
+  background: #fff;
+}
+.dateClass {
+  width: 180px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #000;
 }
