--- a/src/styles/AttendanceRecord.css
+++ b/src/styles/AttendanceRecord.css
@@ -1,127 +1,137 @@
-.container{
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: #fff;
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
 }
-.header{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    padding:40px 0;
-    color:#000;
-    background: #fff;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 40px 0;
+  color: #000;
+  background: #fff;
 }
-.title{
-    width:340px;
-    margin: 0 auto;
-    border:2px solid #2295e8;
-    border-radius:6px;
-    text-align: center;
-    /* height:54px;
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 340px;
+  height: 54px;
+  margin: 0 auto;
+  border: 2px solid #2295e8;
+  border-radius: 6px;
+  /* text-align: center; */
+  /* height:54px;
     line-height:54px; */
-    font-size:28px;
+  font-size: 28px;
 }
-.title>div{
-    display:inline-block;
-    width:50%;
-    padding:13px 0;
+.title > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 54px;
+  /* padding:13px 0; */
 }
-.tab{
-    color:#2295e8;
-   
+.tab {
+  color: #2295e8;
 }
-.currentTab{
-    color:#fff;
-    background:#2295e8;
+.currentTab {
+  color: #fff;
+  background: #2295e8;
 }
-.month{
-    position:fixed;
-    top:118px;
-    left:0;
-    display:flex;
-    justify-content: space-around;
-    width:100%;
-    font-size:30px;
-    color:#707070;
-    border-bottom: 3px solid #ebebeb;
-    background:#fff;
+.month {
+  position: fixed;
+  top: 118px;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  font-size: 30px;
+  color: #707070;
+  border-bottom: 3px solid #ebebeb;
+  background: #fff;
 }
-.currentMonth{
-    height:30px;
-    padding-top:36px;
-    padding-bottom:36px;
-    border-bottom: 6px solid #2295e8;
-    color:#2295e8;
+.currentMonth {
+  height: 30px;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  border-bottom: 6px solid #2295e8;
+  color: #2295e8;
 }
-.noMonth{
-    height:30px;
-    padding-top:36px;
-    padding-bottom:36px;
-    border-bottom: 6px solid transparent;
-    color:#000;
+.noMonth {
+  height: 30px;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  border-bottom: 6px solid transparent;
+  color: #000;
 }
-.blankBox{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:900px;
-    padding-top:218px;
-    background:#fff;
+.blankBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 900px;
+  padding-top: 218px;
+  background: #fff;
 }
-.box{
-   width:282;
-   height:334px;
+.box {
+  width: 282;
+  height: 334px;
 }
-.blankImg{
-    width:282px;
-    height:260px;
+.blankImg {
+  width: 282px;
+  height: 260px;
 }
-.font{
-    width:282px;
-    height:40px;
-    padding-top:30px;
-    font-size:32px;
-    line-height:40px;
-    text-align: center;
-    color:#000;
+.font {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 282px;
+  height: 40px;
+  padding-top: 30px;
+  font-size: 32px;
+  /* line-height:40px; */
+  /* text-align: center; */
+  color: #000;
 }
-.item{
-    border-bottom:2px solid #fafafa;
-    padding:20px 0 22px;
-    margin: 0 22px;
+.item {
+  border-bottom: 2px solid #fafafa;
+  padding: 20px 0 22px;
+  margin: 0 22px;
 }
-.displayDate{
-    font-size:26px;
-    color:#999;
+.displayDate {
+  font-size: 26px;
+  color: #999;
 }
-.detailsList{
-    padding-top:228px;
-    background: #fff;
+.detailsList {
+  padding-top: 228px;
+  background: #fff;
 }
-.work{
-    width:100%;
+.work {
+  width: 100%;
 }
-.work>div{
-    box-sizing:border-box;
-    display:inline-block;
-    margin-top:26px;
-    width:50%;
-    font-size:34px;
+.work > div {
+  box-sizing: border-box;
+  display: inline-block;
+  margin-top: 26px;
+  width: 50%;
+  font-size: 34px;
 }
-.gotoWork,.gooffWork{
-    padding-left:25px;
-    color:#000;
+.gotoWork,
+.gooffWork {
+  padding-left: 25px;
+  color: #000;
 }
-.punchTime{
-    color:#999;
+.punchTime {
+  color: #999;
 }
-.fontColor{
-    color:#000;
+.fontColor {
+  color: #000;
 }
-.redColor{
-    color:#e76948;
+.redColor {
+  color: #e76948;
 }
