--- a/src/styles/CardReminding.css
+++ b/src/styles/CardReminding.css
@@ -1,120 +1,128 @@
-.container{
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: #fff;
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
 }
-.content{
-    padding:0 22px;
+.content {
+  padding: 0 22px;
 }
-.item{
-    z-index:12;
-    position:relative;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    height:146px;
-    border-bottom:2px solid #fafafa;
-    background: #fff;
+.item {
+  z-index: 12;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 146px;
+  border-bottom: 2px solid #fafafa;
+  background: #fff;
 }
-.itemOne{
-    z-index:10;
-    position:relative;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    height:146px;
-    border-bottom:2px solid #fafafa;
-    background: #fff;
+.itemOne {
+  z-index: 10;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 146px;
+  border-bottom: 2px solid #fafafa;
+  background: #fff;
 }
 .mask {
-    z-index:11;
-    position: fixed;
-    top: 96px;
-    left: 0;
-    right:0;
-    bottom:0;
-    background: #666;
+  z-index: 11;
+  position: fixed;
+  top: 96px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #666;
 }
-.maskCopy{
-    z-index:9;
-    position: fixed;
-    top: 96px;
-    left: 0;
-    right:0;
-    bottom:0;
-    background: #999;
+.maskCopy {
+  z-index: 9;
+  position: fixed;
+  top: 96px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #999;
 }
 .maskBox {
-    position: absolute;
-    left:0;
-    top:0;
-    background:#fff;
-    width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #fff;
+  width: 100%;
 }
-.timeSlot{
-    z-index:6;
-    padding-top:68px;
+.timeSlot {
+  z-index: 6;
+  padding-top: 68px;
 }
-.timeDuan{
-    z-index:6;
-    padding-top:210px;
+.timeDuan {
+  z-index: 6;
+  padding-top: 210px;
 }
-.single{
-    z-index:6;
-    width:94%;
-    height:104px;
-    margin: 0 auto;
-    line-height: 104px;
-    text-align: center;
-    font-size:28px;
-    border-bottom:2px solid #fafafa;
+.single {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 6;
+  width: 94%;
+  height: 104px;
+  margin: 0 auto;
+  /* line-height: 104px; */
+  /* text-align: center; */
+  font-size: 28px;
+  border-bottom: 2px solid #fafafa;
 }
-.selectSingle{
-    z-index:6;
-    width:94%;
-    height:104px;
-    margin: 0 auto;
-    line-height: 104px;
-    text-align: center;
-    font-size:32px;
-    color:#2295e8;
-    border-bottom:2px solid #fafafa;
+.selectSingle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 6;
+  width: 94%;
+  height: 104px;
+  margin: 0 auto;
+  /* line-height: 104px; */
+  /* text-align: center; */
+  font-size: 32px;
+  color: #2295e8;
+  border-bottom: 2px solid #fafafa;
 }
-.buleSingle{
-    z-index:6;
-    width:94%;
-    height:104px;
-    margin: 0 auto;
-    line-height: 104px;
-    text-align: center;
-    font-size:28px;
-    color:34px;
-    border-bottom:2px solid #fafafa;
-
+.buleSingle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 6;
+  width: 94%;
+  height: 104px;
+  margin: 0 auto;
+  /* line-height: 104px; */
+  /* text-align: center; */
+  font-size: 28px;
+  color: 34px;
+  border-bottom: 2px solid #fafafa;
 }
-.current{
-    color:#2295e8
+.current {
+  color: #2295e8;
 }
-.work{
-    font-size:30px;
-    color:#000;
+.work {
+  font-size: 30px;
+  color: #000;
 }
-.workRemind{
-    margin-top:24px;
-    font-size:24px;
-    color:#a8a8a8;
+.workRemind {
+  margin-top: 24px;
+  font-size: 24px;
+  color: #a8a8a8;
 }
-.blueRemind{
-    margin-top:24px;
-    font-size:24px;
-    color:#2295e8;
+.blueRemind {
+  margin-top: 24px;
+  font-size: 24px;
+  color: #2295e8;
 }
-.icon{
-    width:20px;
-    height:10px;
-    margin-left:14px;
-    vertical-align: middle;
+.icon {
+  width: 20px;
+  height: 10px;
+  margin-left: 14px;
+  vertical-align: middle;
 }
