--- a/src/styles/EnterpriseManager.css
+++ b/src/styles/EnterpriseManager.css
@@ -1,200 +1,208 @@
-.container{
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: #fff;
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
 }
-.timetable{
-    position: fixed;
-    top:0;
-    left:0;
-    display:flex;
-    justify-content: space-around;
-    width:100%;
-    border-bottom: 3px solid #f6f6f6;
-    font-size:30px;
-    color:#707070;
-    background:#fff;
-  
+.timetable {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  border-bottom: 3px solid #f6f6f6;
+  font-size: 30px;
+  color: #707070;
+  background: #fff;
 }
-.currentTab{
-    position: relative;
-    flex:1;
-    padding-top:36px;
-    padding-bottom:36px;
-    text-align:center;
-    color:#2295e8;
+.currentTab {
+  position: relative;
+  flex: 1;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  text-align: center;
+  color: #2295e8;
 }
-.elseTab{
-    flex:1;
-    padding-top:36px;
-    padding-bottom:36px;
-    border-bottom: 6px solid transparent;
-    text-align: center;
-    color:#7c7c7c;
+.elseTab {
+  flex: 1;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  border-bottom: 6px solid transparent;
+  text-align: center;
+  color: #7c7c7c;
 }
-.currentTab::before{
-    content:'';
-    position:absolute;
-    bottom:0;
-    left:44%;
-    width:36px;
-    height:6px;
-    background:#2295e8;
-
+.currentTab::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 44%;
+  width: 36px;
+  height: 6px;
+  background: #2295e8;
 }
-.content{
-    padding:120px 48px 104px;
-    background: #fff;
+.content {
+  padding: 120px 48px 104px;
+  background: #fff;
 }
-.item{
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
-    height:102px;
-    border-bottom:3px solid #f6f6f6;
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 102px;
+  border-bottom: 3px solid #f6f6f6;
 }
-.hideInput{
-    display:none;
+.hideInput {
+  display: none;
 }
-.name{
-    font-size:28px;
-    color:#000;
+.name {
+  font-size: 28px;
+  color: #000;
 }
-.forward{
-    display:inline-block;
-    width:21px;
-    height:39px;
+.forward {
+  display: inline-block;
+  width: 21px;
+  height: 39px;
 }
 
-.designation{
-    padding:0;
-    border:none;
-    outline:none;
-    width:80%;
-    font-size:26px;
-    color:#000;   
+.designation {
+  padding: 0;
+  border: none;
+  outline: none;
+  width: 80%;
+  font-size: 26px;
+  color: #000;
 }
-.designation::-webkit-input-placeholder{ 
-    color:#b0b0b0;
+.designation::-webkit-input-placeholder {
+  color: #b0b0b0;
 }
-.machine{
-    display:inline-block;
-    font-size:26px;
-    color:#666;
+.machine {
+  display: inline-block;
+  font-size: 26px;
+  color: #666;
 }
-.bottomBar{
-    position:fixed;
-    bottom:0;
-    left:0;
-    width:100%;
-    /* height:102px; */
-    line-height: 102px;
-    border-top:3px solid #ddd;
-    font-size:32px;
+.bottomBar {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 102px;
+  border-top: 3px solid #ddd;
+  font-size: 32px;
 }
-.cancel{
-    display:inline-block;
-    width:50%;
-    text-align: center; 
-    color:#389fe9;
-    background: #fff; 
+.cancel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 102px;
+  width: 50%;
+  color: #389fe9;
+  background: #fff;
 }
-.determine{
-    display:inline-block;
-    width:50%;
-    text-align: center;
-    color:#fff;
-    background:#389fe9; 
+.determine {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 102px;
+  width: 50%;
+  color: #fff;
+  background: #389fe9;
 }
-.add{
-    display:inline-block;
-    width:76%;
-    text-align: center; 
-    color:#389fe9;
-    background: #fff;
+.add {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 102px;
+  width: 76%;
+  color: #389fe9;
+  background: #fff;
 }
-.hideAdd{
-    display:inline-block;
-    width:76%;
-    text-align: center; 
-    color:#b8d6f6;
-    background: #fff;
+.hideAdd {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 102px;
+  width: 76%;
+  color: #b8d6f6;
+  background: #fff;
 }
-.addMachine{
-    position:fixed;
-    bottom:0;
-    left:0;
-    width:100%;
-    height:102px;
-    line-height: 102px;
-    text-align:center;
-    border-top:3px solid #ddd;
-    font-size:32px;
-    color:#389fe9;
-    background: #fff; 
+.addMachine {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 102px;
+  border-top: 3px solid #ddd;
+  font-size: 32px;
+  color: #389fe9;
+  background: #fff;
 }
-.editor{
-    display:inline-block;
-    width:24%;
-    text-align: center;
-    color:#fff;
-    background:#389fe9; 
-
+.editor {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 102px;
+  width: 24%;
+  color: #fff;
+  background: #389fe9;
 }
-.hideEditor{
-    display:none;
+.hideEditor {
+  display: none;
 }
-.codeWrap{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.codeWrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.code{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    width:340px;
-    height:340px;
-    margin-top:174px;
-    border-radius:8px;
-    background:#fff;
-    box-shadow: 0 0 10px #e7e7e7;
-
+.code {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 340px;
+  height: 340px;
+  margin-top: 174px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0 0 10px #e7e7e7;
 }
-.hideCode{
-    display:none;
+.hideCode {
+  display: none;
 }
-.imgSize{
-    width:256px;
-    height: 256px;
+.imgSize {
+  width: 256px;
+  height: 256px;
 }
-.codetext{
-    margin-top:54px;
-    font-size:36px;
-    color:#000;
+.codetext {
+  margin-top: 54px;
+  font-size: 36px;
+  color: #000;
 }
-.text{
-    margin-top:25px;
-    font-size:28px;
-    color:#797979;
+.text {
+  margin-top: 25px;
+  font-size: 28px;
+  color: #797979;
 }
-.deleteImg{
-    width:50px;
-    height:50px;
+.deleteImg {
+  width: 50px;
+  height: 50px;
 }
-.deleteItem{
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
-    height:102px;
-    border-bottom:3px solid #f6f6f6;
+.deleteItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 102px;
+  border-bottom: 3px solid #f6f6f6;
 }
-.deleteItem>div{
-    flex: 1;
-    margin-left:24px;
-    font-size: 0.346667rem;
-    color: #000;
+.deleteItem > div {
+  flex: 1;
+  margin-left: 24px;
+  font-size: 0.346667rem;
+  color: #000;
 }
