--- a/src/styles/PersonalInformation.css
+++ b/src/styles/PersonalInformation.css
@@ -1,185 +1,203 @@
-.container{
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: #fff;
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
 }
-.content{
-    padding-bottom: 140px;
-    background:#fff;
+.content {
+  padding-bottom: 140px;
+  background: #fff;
 }
-.header{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    background:#fff;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
 }
-.information{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    height:96px;
-    padding:0 22px;
-    border-bottom:2px solid #f6f6f6;
+.information {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 96px;
+  padding: 0 22px;
+  border-bottom: 2px solid #f6f6f6;
 }
-.currentMonth{
-    height:30px;
-    padding-top:36px;
-    padding-bottom:36px;
-    border-bottom: 6px solid #2295e8;
-    color:#2295e8;
+.currentMonth {
+  height: 30px;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  border-bottom: 6px solid #2295e8;
+  color: #2295e8;
 }
-.noMonth{
-    height:30px;
-    padding-top:36px;
-    padding-bottom:36px;
-    border-bottom: 6px solid transparent;
-    color:#000;
+.noMonth {
+  height: 30px;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  border-bottom: 6px solid transparent;
+  color: #000;
 }
-.phone{
-    font-size:26px;
-    color:#000;
-    border:none;
-    outline: none;
+.phone {
+  font-size: 26px;
+  color: #000;
+  border: none;
+  outline: none;
 }
-.department{
-    font-size:32px;
+.department {
+  font-size: 32px;
 }
-.tabBox{
-    width:700px;
-    margin:45px auto 8px;
-    border:2px solid #2295e8;
-    border-radius:8px;
-    overflow:hidden;
+.tabBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 700px;
+  margin: 45px auto 8px;
+  border: 2px solid #2295e8;
+  border-radius: 8px;
+  overflow: hidden;
 }
-.currentTab,.tab{
-    display:inline-block;
-    /* height:54px; */
-    width:50%;
-    padding:14px  0;
-    text-align: center;
-    /* line-height: 56px; */
-    font-size:26px;
+.currentTab,
+.tab {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* display:inline-block; */
+  height: 54px;
+  width: 50%;
+  /* padding:14px  0; */
+  /* text-align: center; */
+  /* line-height: 56px; */
+  font-size: 26px;
 }
-.currentTab{
-    color:#fff;
-    background: #2295e8;
+.currentTab {
+  color: #fff;
+  background: #2295e8;
 }
-.tab{
-    color:#2295e8;;
-    background:#fff;
+.tab {
+  color: #2295e8;
+  background: #fff;
 }
-.month{
-    display:flex;
-    justify-content: space-around;
-    align-items:center;
-    width:100%;
-    height:102px;
-    font-size:30px;
-    color:#707070;
-    border-bottom: 2px solid #f6f6f6;
+.month {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 102px;
+  font-size: 30px;
+  color: #707070;
+  border-bottom: 2px solid #f6f6f6;
 }
-.currentMonth{
-    color:#2295e8;
+.currentMonth {
+  color: #2295e8;
 }
-.detailsList{
-    padding:318px 24px 0;
+.detailsList {
+  padding: 318px 24px 0;
 }
-.item{
-    border-bottom:1px solid #f6f6f6;
-    padding:20px 0 22px;
+.item {
+  border-bottom: 1px solid #f6f6f6;
+  padding: 20px 0 22px;
 }
-.displayDate{
-    font-size:22px;
-    color:#999;
+.displayDate {
+  font-size: 22px;
+  color: #999;
 }
-.work{
-    width:100%;
+.work {
+  width: 100%;
 }
-.work>div{
-    box-sizing:border-box;
-    display:inline-block;
-    margin-top:26px;
-    width:50%;
-    font-size:30px;
+.work > div {
+  box-sizing: border-box;
+  display: inline-block;
+  margin-top: 26px;
+  width: 50%;
+  font-size: 30px;
 }
-.gotoWork,.gooffWork{
-    padding-left:24px;
-    color:#000;
+.gotoWork,
+.gooffWork {
+  padding-left: 24px;
+  color: #000;
 }
-.unusual{
-    display:inline-block;
-    color:#e76948;
+.unusual {
+  display: inline-block;
+  color: #e76948;
 }
-.punchTime{
-    color:#999;
+.punchTime {
+  color: #999;
 }
-.bottomBar{
-    position:fixed;
-    bottom:0;
-    left:0;
-    width:100%;
-    /* height:102px; */
-    line-height: 102px;
-    border-top:3px solid #f6f6f6;
-    font-size:32px;
+.bottomBar {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 102px;
+  border-top: 3px solid #f6f6f6;
+  font-size: 32px;
 }
-.editor{
-    display:inline-block;
-    width:24%;
-    text-align: center;
-    color:#fff;
-    background:#389fe9; 
-
+.editor {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24%;
+  height: 102px;
+  color: #fff;
+  background: #389fe9;
 }
-.add{
-    display:inline-block;
-    width:76%;
-    text-align: center; 
-    color:#389fe9;
-    background: #fff;
+.add {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 76%;
+  height: 102px;
+  color: #389fe9;
+  background: #fff;
 }
-.more{
-    display:inline-block;
-    width:100%;
-    text-align: center; 
-    color:#389fe9;
-    background: #fff;
+.more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 102px;
+  width: 100%;
+  text-align: center;
+  color: #389fe9;
+  background: #fff;
 }
-.fontColor{
-    color:#000;
+.fontColor {
+  color: #000;
 }
-.redColor{
-    color:#e76948;
+.redColor {
+  color: #e76948;
 }
-.blankBox{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:680px;
-    padding-top:300px;
-    background:#fff;
+.blankBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 680px;
+  padding-top: 300px;
+  background: #fff;
 }
-.box{
-   width:282;
-   height:334px;
+.box {
+  width: 282;
+  height: 334px;
 }
-.blankImg{
-    width:282px;
-    height:260px;
+.blankImg {
+  width: 282px;
+  height: 260px;
 }
-.font{
-    width:282px;
-    height:40px;
-    padding-top:30px;
-    font-size:32px;
-    line-height:40px;
-    text-align: center;
-    color:#000;
+.font {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 282px;
+  height: 40px;
+  padding-top: 30px;
+  font-size: 32px;
+  /* line-height:40px; */
+  /* text-align: center; */
+  color: #000;
 }
-.phoneClass{
-    margin-left:10px;
+.phoneClass {
+  margin-left: 10px;
 }
