--- a/src/styles/PersonalRecord.css
+++ b/src/styles/PersonalRecord.css
@@ -1,326 +1,347 @@
-.container{
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: #fff;
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
 }
-.header{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    padding:40px 0 10px;
-    color:#000;
-    background: #fff;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 40px 0 10px;
+  color: #000;
+  background: #fff;
 }
-.searchImg{
-    display:inline-block;
-    position: absolute;
-    top:48px;
-    right:24px;
-    width:40px;
-    height:40px;
+.searchImg {
+  display: inline-block;
+  position: absolute;
+  top: 48px;
+  right: 24px;
+  width: 40px;
+  height: 40px;
 }
-.title{
-    /* width:514px; */
-    width:340px;
-    /* height: 54px; */
-    margin: 0 auto;
-    border:2px solid #2295e8;
-    border-radius:6px;
-    text-align: center;
-    /* line-height:56px; */
-    font-size:28px;
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 340px;
+  height: 54px;
+  margin: 0 auto;
+  border: 2px solid #2295e8;
+  border-radius: 6px;
+  /* text-align: center; */
+  /* line-height:56px; */
+  font-size: 28px;
 }
-.title>div{
-    display:inline-block;
-    width:50%;
-    padding:13px 0 ;
+.title > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* display: inline-block; */
+  width: 50%;
+  height: 54px;
+  /* padding:13px 0 ; */
 }
 /* .title>div:nth-child(2){
     border-left:2px solid #2295e8;
     border-right:2px solid #2295e8;
 } */
-.tab{
-    color:#2295e8; 
+.tab {
+  color: #2295e8;
 }
-.currentTab{
-    color:#fff;
-    background:#2295e8;
+.currentTab {
+  color: #fff;
+  background: #2295e8;
 }
-.currentMonth{
-    color:#2295e8;
+.currentMonth {
+  color: #2295e8;
 }
-.timetable{
-    position:fixed;
-    top:110px;
-    left:0;
-    display:flex;
-    justify-content: space-around;
-    width:100%;
-    font-size:30px;
-    color:#707070;
-    background:#fff;
-    border-bottom: 2px solid #ddd;
+.timetable {
+  position: fixed;
+  top: 110px;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  font-size: 30px;
+  color: #707070;
+  background: #fff;
+  border-bottom: 2px solid #ddd;
 }
-.currentMonth{
-    height:30px;
-    padding-top:36px;
-    padding-bottom:36px;
-    border-bottom: 6px solid #2295e8;
-    color:#2295e8;
+.currentMonth {
+  height: 30px;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  border-bottom: 6px solid #2295e8;
+  color: #2295e8;
 }
-.noMonth{
-    height:30px;
-    padding-top:36px;
-    padding-bottom:36px;
-    border-bottom: 6px solid transparent;
-    color:#000;
+.noMonth {
+  height: 30px;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  border-bottom: 6px solid transparent;
+  color: #000;
 }
-.detailsList{
-    background:#fff;
-    padding-bottom:102px;
-    padding-top:212px;
+.detailsList {
+  background: #fff;
+  padding-bottom: 102px;
+  padding-top: 212px;
 }
-.item{
-    border-bottom:2px solid #f6f6f6;
-    padding:20px 0 22px;
-    margin:0 22px;
+.item {
+  border-bottom: 2px solid #f6f6f6;
+  padding: 20px 0 22px;
+  margin: 0 22px;
 }
-.name{
-    padding-left:22px;
-    font-size:22px;
-    color:#999;
+.name {
+  padding-left: 22px;
+  font-size: 22px;
+  color: #999;
 }
-.work{
-    width:100%;
+.work {
+  width: 100%;
 }
-.work>div{
-    box-sizing:border-box;
-    display:inline-block;
-    margin-top:26px;
-    width:50%;
-    font-size:34px;
+.work > div {
+  box-sizing: border-box;
+  display: inline-block;
+  margin-top: 26px;
+  width: 50%;
+  font-size: 34px;
 }
-.gotoWork,.gooffWork{
-    padding-left:25px;
-    color:#000;
+.gotoWork,
+.gooffWork {
+  padding-left: 25px;
+  color: #000;
 }
-.punchTime{
-    color:#999;
+.punchTime {
+  color: #999;
 }
-.totalDay{
-    margin-top:26px;
-    padding-left:24px;
-    color:#000;
+.totalDay {
+  margin-top: 26px;
+  padding-left: 24px;
+  color: #000;
 }
-.nameBox{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    padding:0 22px;
-    font-size:22px;
-    color:#999;
+.nameBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 22px;
+  font-size: 22px;
+  color: #999;
 }
-.detail{
-    color:#2295e8;
+.detail {
+  color: #2295e8;
 }
-.footer{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    position:fixed;
-    left:0;
-    bottom:0;
-    width:100%;
-    height:102px;
-    border-top:3px solid #ddd;
-    color:#2295e8;
-    font-size:30px;
-    z-index:1;
-    background:#fff;
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 102px;
+  border-top: 3px solid #ddd;
+  color: #2295e8;
+  font-size: 30px;
+  z-index: 1;
+  background: #fff;
 }
-.brief{
-    width:560px;
-    height:102px;
-    line-height: 102px;
-    text-align: center;
+.brief {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 560px;
+  height: 102px;
+  /* line-height: 102px; */
+  /* text-align: center; */
 }
-.top{
-    width:20px;
-    height:10px;
-    margin-left:25px;
-    vertical-align: middle;
+.top {
+  width: 20px;
+  height: 10px;
+  margin-left: 25px;
+  vertical-align: middle;
 }
-.selectBox{
-    display:inline-block;
+.selectBox {
+  display: inline-block;
 }
-.exportData{
-    height:102px;
-    width:186px;
-    line-height: 102px;
-    text-align: center;
-    color:#fff;
-    background: #2295e8;
+.exportData {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 102px;
+  width: 186px;
+  /* line-height: 102px; */
+  /* text-align: center; */
+  color: #fff;
+  background: #2295e8;
 }
-.exportProhibit{
-    height:102px;
-    width:186px;
-    line-height: 102px;
-    text-align: center;
-    color:#fff;
-    background: rgb(173, 214, 243)
+.exportProhibit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 102px;
+  width: 186px;
+  /* line-height: 102px; */
+  /* text-align: center; */
+  color: #fff;
+  background: rgb(173, 214, 243);
 }
 .mask {
-    background: rgba(0, 0, 0, 0.3);
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  background: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
-.makeHide{
-    background: rgba(0, 0, 0, 0);
-    position:absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
+.makeHide {
+  background: rgba(0, 0, 0, 0);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
 }
-.hideMask{
-    display:none;
+.hideMask {
+  display: none;
 }
 .maskBox {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    background:#fff;
-    width:100%;
-    padding-bottom:60px;
-    z-index: 3;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  background: #fff;
+  width: 100%;
+  padding-bottom: 60px;
+  z-index: 3;
 }
-.operation{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    position:relative;
-    width:100%;
-    height:98px;
+.operation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 98px;
 }
-.spread{
-    width:70px;
-    height:28px;
+.spread {
+  width: 70px;
+  height: 28px;
 }
-.determine{
-    position: absolute;
-    top:28px;
-    right:30px;
-    width:60px;
-    height:30px;
-    font-size:28px;
-    color:#2295e8;
+.determine {
+  position: absolute;
+  top: 28px;
+  right: 30px;
+  width: 60px;
+  height: 30px;
+  font-size: 28px;
+  color: #2295e8;
 }
-.toggleBox{
-    display:flex;
-    justify-content:space-around;
-    width:100%;
-    margin-bottom:5px;
-    border-bottom: 2px solid #ddd;
-    font-size:30px;
+.toggleBox {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin-bottom: 5px;
+  border-bottom: 2px solid #ddd;
+  font-size: 30px;
 }
-.timeTab{
-    height:30px;
-    padding-top:14px;
-    padding-bottom:36px;
-    border-bottom: 6px solid transparent;
-    color:#000;
+.timeTab {
+  height: 30px;
+  padding-top: 14px;
+  padding-bottom: 36px;
+  border-bottom: 6px solid transparent;
+  color: #000;
 }
-.selectTimeTab{
-    height:30px;
-    padding-top:14px;
-    padding-bottom:36px;
-    border-bottom: 6px solid #2295e8;
-    color:#2295e8;
+.selectTimeTab {
+  height: 30px;
+  padding-top: 14px;
+  padding-bottom: 36px;
+  border-bottom: 6px solid #2295e8;
+  color: #2295e8;
 }
 
-
-.departmentBox{
-    padding:0 22px;
-    margin-bottom:104px;
-
+.departmentBox {
+  padding: 0 22px;
+  margin-bottom: 104px;
 }
-.term,.selectTerm{
-    float:left;
-    width:30%;
-    height:94px;
-    margin: 0 8px 34px;
-    border:2px solid #ddd;
-    border-radius:2px;
-    line-height:94px;
-    text-align: center;
-    font-size:28px;
-    color:#000;
+.term,
+.selectTerm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: left;
+  width: 30%;
+  height: 94px;
+  margin: 0 8px 34px;
+  border: 2px solid #ddd;
+  border-radius: 2px;
+  /* line-height: 94px; */
+  /* text-align: center; */
+  font-size: 28px;
+  color: #000;
 }
-.selectTerm{
-    color:#fff;
-    background:#2295e8;
+.selectTerm {
+  color: #fff;
+  background: #2295e8;
 }
-.clearBoth{
-    clear: both;
+.clearBoth {
+  clear: both;
 }
-.hide{
-    display:none;
+.hide {
+  display: none;
 }
-.displayDate{
-    /* padding-left:22px; */
-    font-size:22px;
-    color:#999;
+.displayDate {
+  /* padding-left:22px; */
+  font-size: 22px;
+  color: #999;
 }
-.box{
-    width:340px;
-    height:400px;
+.box {
+  width: 340px;
+  height: 400px;
 }
-.fontColor{
-    color:#000;
+.fontColor {
+  color: #000;
 }
-.redColor{
-    color:#e76948;
+.redColor {
+  color: #e76948;
 }
-.blankBox{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:680px;
-    padding-top:300px;
-    background:#fff;
+.blankBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 680px;
+  padding-top: 300px;
+  background: #fff;
 }
-.box{
-   width:282;
-   height:334px;
+.box {
+  width: 282;
+  height: 334px;
 }
-.blankImg{
-    width:282px;
-    height:260px;
+.blankImg {
+  width: 282px;
+  height: 260px;
 }
-.font{
-    width:282px;
-    height:40px;
-    padding-top:30px;
-    font-size:32px;
-    line-height:40px;
-    text-align: center;
-    color:#000;
+.font {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 282px;
+  height: 40px;
+  padding-top: 30px;
+  font-size: 32px;
+  /* line-height: 40px; */
+  /* text-align: center; */
+  color: #000;
 }
-.maskDate{
-    display:flex;
-    justify-content:center;
-    max-height:860px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    left:0;
-    bottom:0;
-    background:#fff;
+.maskDate {
+  display: flex;
+  justify-content: center;
+  max-height: 860px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  left: 0;
+  bottom: 0;
+  background: #fff;
 }
