--- a/src/styles/ReleaseAnnouncement.css
+++ b/src/styles/ReleaseAnnouncement.css
@@ -1,165 +1,167 @@
-.container{
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: #fff;
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
 }
-.header{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:76px;
-    font-size:28px;
-    color:#000;
-    background: #fff;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 76px;
+  font-size: 28px;
+  color: #000;
+  background: #fff;
 }
-.cancel{
-    padding-left:22px;
+.cancel {
+  padding-left: 22px;
 }
-.release{
-    padding-right:22px;
-    color:#2295e8;
+.release {
+  padding-right: 22px;
+  color: #2295e8;
 }
-.noRelease{
-    padding-right:22px;
-    color:#afd1f4;
+.noRelease {
+  padding-right: 22px;
+  color: #afd1f4;
 }
-.title{
-    font-size:36px;
+.title {
+  font-size: 36px;
 }
-.content{
-    padding:76px 22px 196px;
-    background:#fff;
+.content {
+  padding: 76px 22px 196px;
+  background: #fff;
 }
-.box{
-    border-bottom:2px solid #ededed;
+.box {
+  border-bottom: 2px solid #ededed;
 }
-.inputBox{
-    margin:34px 0;
-    font-size:34px;
-    font-weight: 700;
-    color:#000;
-    width:100%;
-    /* height:32px; */
-    overflow: hidden;
-    border:0;
-    outline:none;
-    padding:0;
-    -webkit-appearance:none;
+.inputBox {
+  margin: 34px 0;
+  font-size: 34px;
+  font-weight: 700;
+  color: #000;
+  width: 100%;
+  /* height:32px; */
+  overflow: hidden;
+  border: 0;
+  outline: none;
+  padding: 0;
+  -webkit-appearance: none;
 }
-textarea{
-    border:none;
-    outline:none;
-    resize:none;
+textarea {
+  border: none;
+  outline: none;
+  resize: none;
 }
-.inputBlock{
-    width:100%;
-    min-height:450px;
-    margin:30px 0;
-    font-size:28px;
-    line-height: 42px;
-    padding:0;
+.inputBlock {
+  width: 100%;
+  min-height: 450px;
+  margin: 30px 0;
+  font-size: 28px;
+  line-height: 42px;
+  padding: 0;
 }
-.imgBox{
-    width:726px;
-    margin:0 auto;
+.imgBox {
+  width: 726px;
+  margin: 0 auto;
 }
-.singleImg{
-    display:inline-block;
-    position:relative;
-    width:31.1%;
-    height:223px;
-    margin:8px;
-    overflow: hidden;
+.singleImg {
+  display: inline-block;
+  position: relative;
+  width: 31.1%;
+  height: 223px;
+  margin: 8px;
+  overflow: hidden;
 }
-.x{
-    display:inline-block;
-    position:absolute;
-    top:12px;
-    right:12px;
-    width:50px;
-    height:50px;
+.x {
+  display: inline-block;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 50px;
+  height: 50px;
 }
-.img{
-    display:inline-block;
-    position:absolute;
-    clip:rect(0px 223px 223px 0px);
-    max-height:223px;    
+.img {
+  display: inline-block;
+  position: absolute;
+  clip: rect(0px 223px 223px 0px);
+  max-height: 223px;
 }
-.dateBox{
-    position:fixed;
-    bottom:105px;
-    left:0;
-    width:100%;
+.dateBox {
+  position: fixed;
+  bottom: 105px;
+  left: 0;
+  width: 100%;
 }
-.releaseTime{
-    /* height:38px; */
-    padding:0 22px 40px;
-    /* text-indent: 30px; */
-    font-size:28px;
-    color:#000;
-    background:#fff;
-    /* margin-top:36px;
+.releaseTime {
+  /* height:38px; */
+  padding: 0 22px 40px;
+  /* text-indent: 30px; */
+  font-size: 28px;
+  color: #000;
+  background: #fff;
+  /* margin-top:36px;
     padding-left:24px;
     font-size:28px;
     color:#000; */
 }
 
-.footer{
-    z-index:10;
-    display:flex;
-    justify-content: space-around;
-    align-items: center;
-    position:fixed;
-    bottom:0;
-    left:0;
-    width:100%;
-    height:46px;
-    padding:30px 0;
-    border-top:2px solid #ddd;
-    background: #fff;
+.footer {
+  z-index: 10;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 46px;
+  padding: 30px 0;
+  border-top: 2px solid #ddd;
+  background: #fff;
 }
-.history{
-    /* padding:0 36px; */
-    border-right:2px solid #ddd;
-    height: 48px;
-    line-height: 48px;
-    width:50%;
-    text-align: center;
-    font-size:28px;
+.history {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding:0 36px; */
+  border-right: 2px solid #ddd;
+  height: 48px;
+  /* line-height: 48px; */
+  width: 50%;
+  /* text-align: center; */
+  font-size: 28px;
 }
-.addphoto{
-    position: relative;
-    top:-2px;
-    width:40px;
-    height:32px;
-    vertical-align: middle;
+.addphoto {
+  position: relative;
+  top: -2px;
+  width: 40px;
+  height: 32px;
+  vertical-align: middle;
 }
-.selectDate{
-    font-size:28px;
-    color:#2295e8;
-  
+.selectDate {
+  font-size: 28px;
+  color: #2295e8;
 }
-.selectDate>img{
-    width:18px;
-    height:10px;
-    padding-left:56px;
-    vertical-align: middle;
+.selectDate > img {
+  width: 18px;
+  height: 10px;
+  padding-left: 56px;
+  vertical-align: middle;
 }
-.photoBtn{
-    position:absolute;
-    top:22px;
-    left:525px;
-    width:75px;
-    color:transparent;
-    opacity:0;
-    overflow:hidden;
+.photoBtn {
+  position: absolute;
+  top: 22px;
+  left: 525px;
+  width: 75px;
+  color: transparent;
+  opacity: 0;
+  overflow: hidden;
 }
 /* .photoBtn{
     position:relative;
@@ -172,70 +174,73 @@ textarea{
     opacity:0;
 } */
 .showMask {
-    background: rgba(0, 0, 0, 0.3);
-    position:absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-  }
-.hideMask {
-    display:none;
-    background: rgba(0, 0, 0, 0.3);
-    position:absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
+  background: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
-.maskHide{
-    background: rgba(0, 0, 0, 0);
-    position:absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
+.hideMask {
+  display: none;
+  background: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+.maskHide {
+  background: rgba(0, 0, 0, 0);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
 }
 .maskBox {
-    display:flex;
-    justify-content:center;
-    position: fixed;
-    width: 100%;
-    left:0;
-    bottom:0;
-    margin-bottom:40px;
-    background:#fff;
-    z-index: 3;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  margin-bottom: 40px;
+  background: #fff;
+  z-index: 3;
 }
-.buttonSlect{
-    display:inline-block;
-    padding-left:18px;
-    color:#3d9fea;
-    font-size:30px;
-    text-indent:0;
+.buttonSlect {
+  display: inline-block;
+  padding-left: 18px;
+  color: #3d9fea;
+  font-size: 30px;
+  text-indent: 0;
 }
-.buttonSlect1{
-    display:inline-block;
-    padding-left:13px;
-    color:#3d9fea;
-    font-size:30px;
-    text-indent:0;
+.buttonSlect1 {
+  display: inline-block;
+  padding-left: 13px;
+  color: #3d9fea;
+  font-size: 30px;
+  text-indent: 0;
 }
-.icon{
-    display:inline-block;
-    position:relative;
-    top:-2px;
-    width:20px;
-    height: 10px;
-    margin:0 12px 0 10px;
-    vertical-align: middle;
+.icon {
+  display: inline-block;
+  position: relative;
+  top: -2px;
+  width: 20px;
+  height: 10px;
+  margin: 0 12px 0 10px;
+  vertical-align: middle;
 }
-.photoBox{
-    width:50%;
-    height: 48px;
-    line-height: 48px;
-    text-align: center;
+.photoBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 48px;
+  /* line-height: 48px; */
+  /* text-align: center; */
 }
