--- a/src/styles/RevisionDepartment.css
+++ b/src/styles/RevisionDepartment.css
@@ -1,84 +1,94 @@
-.container{
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background: #fff;
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
 }
-.information{
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
-    height:102px;
-    margin: 0 22px 16px;
-    font-size:30px;
-    border-bottom:2px solid #ddd;
+.information {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 102px;
+  margin: 0 22px 16px;
+  font-size: 30px;
+  border-bottom: 2px solid #ddd;
 }
-.department{
-    color:#000;
-    font-size:32px;
+.department {
+  color: #000;
+  font-size: 32px;
 }
-.departmentSlect{
-    color:#2295e8;
-    font-size:32px;
+.departmentSlect {
+  color: #2295e8;
+  font-size: 32px;
 }
-.departmentBox{
-    padding:0 22px;
-    height:920px;
-    overflow: auto;
+.departmentBox {
+  padding: 0 22px;
+  height: 920px;
+  overflow: auto;
 }
-.itemList,.selectItem{
-    float:left;
-    width:28.2%;
-    /* height:94px; */
-    margin:16px;
-    padding:30px 0;
-    border:2px solid #f6f6f6;
-    border-radius:2px;
-    /* line-height:94px; */
-    text-align: center;
-    font-size:28px;
-    color:#000;
+.itemList,
+.selectItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: left;
+  width: 28.2%;
+  height: 94px;
+  margin: 16px;
+  /* padding: 30px 0; */
+  border: 2px solid #f6f6f6;
+  border-radius: 2px;
+  /* line-height:94px; */
+  /* text-align: center; */
+  font-size: 28px;
+  color: #000;
 }
-.selectItem{
-    color:#fff;
-    background:#2295e8;
+.selectItem {
+  color: #fff;
+  background: #2295e8;
 }
-.editBox{
-    position:fixed;
-    left:0;
-    bottom:0;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    width:100%;
-    border-top:3px solid #ddd;
+.editBox {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border-top: 3px solid #ddd;
 }
-.edit{
-    width:100%;
-    padding:34px 0;
-    font-size:30px;
-    text-align: center;
-    /* height: 100px; */
-    /* line-height: 100px; */
-    color:#2295e8;
-    background:#fff;
+.edit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  /* padding: 34px 0; */
+  font-size: 30px;
+  /* text-align: center; */
+  height: 100px;
+  /* line-height: 100px; */
+  color: #2295e8;
+  background: #fff;
 }
-.cancel,.confirm{
-    width:50%;
-    padding:34px 0;
-    /* height:100px; */
-    font-size:30px;
-    text-align: center;
-    /* line-height: 100px; */
-   
+.cancel,
+.confirm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  /* padding:34px 0; */
+  height: 100px;
+  font-size: 30px;
+  /* text-align: center; */
+  /* line-height: 100px; */
 }
-.cancel{
-    color:#2295e8;
-    background:#fff;
+.cancel {
+  color: #2295e8;
+  background: #fff;
 }
-.confirm{
-    color:#fff;
-    background:#2295e8;
+.confirm {
+  color: #fff;
+  background: #2295e8;
 }
